[project] 
name = "dlog" 
version = "1.0.0" 
description = "A simple logging library for Python" 
readme = "README.md" 
authors = [ {name = "drawksr"} ] 
license = {text = "MIT"} 
requires-python = ">=3.8" 
dependencies = [
    "termcolor==3.1.0"
] 
[build-system] 
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"